<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditNoteFragment">

    <!-- Main content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textAlignment="center"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/title"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:minLines="1"

                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:hint="@string/content"
                android:background="@null"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_current_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/delete_current_note"
        app:srcCompat="@drawable/outline_delete_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>