<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/user_name"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/register_user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_user_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_user_name"
        app:layout_constraintStart_toStartOf="@+id/register_user_name"
        app:layout_constraintTop_toBottomOf="@+id/register_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/user_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_user_name"
        app:layout_constraintStart_toStartOf="@id/register_user_name"
        app:layout_constraintEnd_toEndOf="@id/register_user_name"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="5.0"
        app:layout_constraintVertical_bias="0.7"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="102dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/register_user_password"
        app:layout_constraintStart_toStartOf="@+id/register_user_password"
        app:layout_constraintTop_toBottomOf="@+id/register_user_password" />

</androidx.constraintlayout.widget.ConstraintLayout>